Дополнительный рефакторинг